[package]
authors = ["Povilas Balciunas <balciunas90@gmail.com>"]
edition = "2018"
name = "http-proxy"
version = "0.1.0"

[dependencies]
httparse = "1.3.4"
http = "0.2.0"
unwrap = "1.2.1"
machine = "0.3.0"

[dependencies.async-std]
version = "1.4.0"
features = ["attributes", "unstable"] # unstable is for sync::channel
